# agentic-ai-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  prompts.py  research_agent.py
app/agents/: base.py  critic_agent.py  drafting_agent.py  extractor_agent.py  finalizer_agent.py  graph.py  memory_agent.py  prompts.py  research_agent.py  retriever_agent.py  router_agent.py  state.py
app/agents/nodes/: critique.py  draft.py  extract.py  finalize.py  intake.py  retrieve.py
app/api/routes/: __init__.py  a2a.py  ingest.py  review.py  review_runs.py
app/core/: a2a_models.py  config.py  logging.py  models.py  observability.py
app/db/: memory_models.py  models.py  session.py
app/services/: ingestion.py  llm.py  memory_service.py  retrieval.py  review_exectuor.py  review_runs.py  vector_store.py
app/tools/: external_tools.py
evals/: generate_review_dataset_500.py  run_review_evals.py
