[project]
name = "agentic-ai-complete-legal"
version = "0.1.0"
description = "Agentic document review and case preparation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "openai>=1.54.0",
    "langgraph>=0.2.40",
    "langchain-core>=0.3.15",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
