[project]
name = "agentic-ai-complete-legal"
version = "0.1.0"
description = "Agentic document review and case preparation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "openai>=1.54.0",
    "langgraph>=0.2.40",
    "langchain-core>=0.3.15",
    "langchain-text-splitters>=0.3.0",
    "pinecone>=5.3.1",
    "pypdf>=5.1.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
    "arize-phoenix-otel>=0.9.0",
    "opentelemetry-api>=1.30.0",
    "openinference-instrumentation-openai>=0.1.18",
    "arize-phoenix-client>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
